k8s/rails.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails
  labels:
    app: rails
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: gcr.io/memoq-backend/rails
        imagePullPolicy: Always
        tty: true
        stdin: true
        ports:
          - containerPort: 3000
